--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -142,8 +142,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://internal.{{ domain }}/iplocator/index.php?{{ urlQuery }}">Locate IP</a>
+                        {% url 'iplocator:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">Locate IP</a>
                     </div>
                     <!-- nav-link -->
                 </li>
