--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -44,8 +44,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://internal.{{ domain }}/reactivate/index.php?{{ urlQuery }}">Reactivate</a>
+                        {% url 'reactivateuser:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">Reactivate</a>
                     </div>
                     <!-- nav-link -->
                 </li>
@@ -110,8 +111,9 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://internal.{{ domain }}/troublereporter/">Outages</a>
+                        {% url 'userinput:index' as thisurl %}
+                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
+                           href="{{ thisurl }}">User Input</a>
                     </div>
                     <!-- nav-link -->
                 </li>
@@ -168,9 +170,6 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        {% url 'userinput:index' as thisurl %}
-                        <a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}"
-                           href="{{ thisurl }}">User Input</a>
                     </div>
                     <!-- nav-link -->
                 </li>
@@ -223,6 +222,8 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
+                        <a class="nav-link p-0"
+			   href="https://www.{{ domain }}/scripts/internal/InfoUser/">Old Tools &#9194;</a>
                     </div>
                 </li>
                 <li class="w-100 d-none d-sm-block">
