--- a/internaltools/infouser/templates/infouser/sample.html
+++ b/internaltools/infouser/templates/infouser/sample.html
@@ -14,7 +14,6 @@
                 {% endfor %}
             </ul>
         {% endif %}
-        <h1>{{ debugMessage }}</h1>
         <!-- form search users -->
         <form id="SearchLoginForm" action="" novalidate="" method="POST">
             {% csrf_token %}
@@ -78,7 +77,9 @@
                     </div>
                 {% endfor %}
                 <div class="col-sm-2">Credit Card:</div>
-                <div class="col-sm-10">{{ userInfo.CreditcardNumber|default:""|truncatechars:8 }} {{ userInfo.CreditCardExpiry|date:"ym" }}</div>
+                <div class="col-sm-10">
+                    {{ userInfo.CreditcardNumber|default:""|truncatechars:8 }} {{ userInfo.CreditCardExpiry|date:"ym" }}
+                </div>
                 <div class="w-100 d-none d-sm-block border-bottom">
                     <!-- new row -->
                 </div>
