userplans regex fix

--- a/internaltools/userplans/templates/userplans/sample.html
+++ b/internaltools/userplans/templates/userplans/sample.html
@@ -48,7 +48,7 @@
             <div class="col-md-2" title="Select a plan for this user">Plan</div>
             <div class="col-md-2" title="plan will be added after this date">Next Bill</div>
             <div class="col-md-1" title="override the quantity">Qty Override</div>
-            <div class="col-md-1" title="plan will expires after this">Max Repete</div>
+            <div class="col-md-1" title="plan will expires after this">Max Repeate</div>
             <div class="col-md-2" title="plan will expire after this date">Plan Expires</div>
             <div class="col-md-2" title="additional info to include on invoice">Note</div>
             <div class="col-md-1">Operator</div>
