--- a/internaltools/reactivateuser/templates/reactivateuser/sample.html
+++ b/internaltools/reactivateuser/templates/reactivateuser/sample.html
@@ -44,7 +44,7 @@
                             <button type="submit"
                                     name="updateItemBTN"
                                     value="1"
-                                    class="btn btn-secondary mb-3">Restore User</button>
+                                    class="btn btn-secondary mb-3">Reactivate User</button>
                         </div>
                     </div>
                 </fieldset>
