--- a/internaltools/restoreuser/templates/restoreuser/sample.html
+++ b/internaltools/restoreuser/templates/restoreuser/sample.html
@@ -18,7 +18,7 @@
         <form id="restoreuser" action="" novalidate="" method="POST">
             {% csrf_token %}
             <div class="row g-3">
-                <fieldset class="form-group border">
+                <fieldset class="form-group border" {{ freezeForm|yesno:"disabled," }}>
                     <legend>Restore User:</legend>
                     <div class="row mb-3">
                         <label for="{{ formRestoreUser.loginName.id_for_label }}"
